Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134885

Fail to build with protobuf-30

XMLWordPrintable

    • 514769d1b (dev), 01b1e9df8 (6.9), 3e3d6a49a (6.8)

      The build fails because various protobuf API functions now return string_view instead of string, triggering errors like

      error: could not convert  ‘containingType->google::protobuf::Descriptor::name()’ from ‘google::protobuf::internal::DescriptorStringView’ {aka ‘std::basic_string_view<char>’} to ‘std::string’ {aka ‘std::__cxx11::basic_string<char>’}

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            semlanik Alexey Edelev
            xry111 Xi Ruoyao
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes