Adapt the generator code to be compatible with protobuf >= 30

The newer protobuf version uses string_views as the return value.
Wrap the respecitive API with constructing std::string and update
some of the util functions to accept std::string_view arguments
but not plain std::string.

Fixes: QTBUG-134885
Pick-to: 6.8
Change-Id: I8bc06c46167a8b1bc0dca36242249e672ffcccd3
Reviewed-by: Tatiana Borisova <tatiana.borisova@qt.io>
Reviewed-by: Dennis Oberst <dennis.oberst@qt.io>
(cherry picked from commit 514769d1bd595d0e54bbe34c0bd167636d4825dc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>